Use Java 8 style `URLEncoder.encode`